--- a/index.html
+++ b/index.html
@@ -38,6 +38,8 @@
       <p class="element_info">Adobe Illustrator, Adobe Photoshop</p>
       <p class="element">Presentation Design:</p>
       <p class="element_info">Microsoft PowerPoint, Adobe Acrobat</p>
+      <p class="element">Languages:</p>
+      <p class="element_info">English (fluent), Russian (native), Spanish</p>
     </div>
 
     <div class="eight columns">
