--- a/index.html
+++ b/index.html
@@ -60,6 +60,8 @@
       <h4>Education</h4>
       <p class="element">Bachelor in Computer Science</p>
       <p class="element_info">Altai State Technical University, 1994 - 1999</p>
+      <p class="element">Languages:</p>
+      <p class="element_info">English, Spanish, Russian</p>
     </div>
   </div>
   <h1></h1>
