--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
       <h4>Personal Information</h4>
       <p class="element">Name:</p>
       <p class="element_info">Alexander Samoyloff</p>
-      <p class="element">E-mail:</p>
-      <p class="element_info">alexander.samoyloff@gmail.com</p>
       <p class="element">Phone:</p>
       <p class="element_info">+995 595 03 81 21</p>
       <p class="element">E-mail:</p>
@@ -39,7 +37,7 @@
       <p class="element">Presentation Design:</p>
       <p class="element_info">Microsoft PowerPoint, Adobe Acrobat</p>
       <p class="element">Languages:</p>
-      <p class="element_info">English (fluent), Russian (native), Spanish</p>
+      <p class="element_info">English, Spanish, Russian</p>
     </div>
 
     <div class="eight columns">
