--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
   <link rel="stylesheet" href="css/skeleton.css">
 </head>
 <body>
-<div class="container" width="80%">
+<div class="container">
   <h1>Alexander Samoyloff</h1>
   <div class="row">
     <div class="four columns">
       <h4>Personal Information</h4>
+      <img src="images/photo.png" alt="photo">
       <p class="element">Name:</p>
       <p class="element_info">Alexander Samoyloff</p>
       <p class="element">Phone:</p>
-      <p class="element_info">+995 595 03 81 21</p>
+      <p class="element_info">
+        <a href="tel:+995595038121">
+          +995 595 03 81 21
+        </a>
+      </p>
       <p class="element">E-mail:</p>
       <p class="element_info">
         <a href="mailto:alexander.samoyloff@gmail.com">
@@ -56,13 +61,12 @@
       </ul>
       <h4>Employment</h4>
       <p class="element">LogoWorks, Inc.</p>
-      <p class="element_info">Senior Graphic Designer, July 2004 - Present</p>
+      <p class="element_info">Senior Graphic Designer, July 2004 — Present</p>
       <h4>Education</h4>
       <p class="element">Bachelor in Computer Science</p>
-      <p class="element_info">Altai State Technical University, 1994 - 1999</p>
+      <p class="element_info">Altai State Technical University, 1994 — 1999</p>
     </div>
   </div>
-  <h1></h1>
 </div>
 </body>
 </html>
