--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Alexander Samoyloff, Senior Graphic Designer - CV</title>
   <link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/normalize.css">
@@ -13,7 +14,7 @@
   <div class="row">
     <div class="four columns">
       <h4>Personal Information</h4>
-      <img src="images/photo.png" alt="photo">
+      <img src="images/photo.png" alt="Alexander Samoyloff photo">
       <p class="element">Name:</p>
       <p class="element_info">Alexander Samoyloff</p>
       <p class="element">Phone:</p>
